# oqtepa-lavash-API

./: .env  .env_sample  .gitignore  Makefile  README.md  TODO  oqtepa  oqtepa.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  dev.main.yaml  main.yaml
apps/: urls.py
apps/company/: admin.py  models.py  serializers.py  urls.py  views.py
apps/company/fixtures/: region.yaml
apps/company/migrations/: 0001_initial.py  0002_alter_phone_options.py  0002_settings_contacts_settings_picture_settings_qr_code_and_more.py  0003_alter_settings_contacts.py  0003_region.py  0003_rename_phone_phone_phone_number.py  0004_alter_about_options_alter_social_options.py  0005_remove_settings_contacts_settings_bot_url_and_more.py  0006_alter_settings_qr_text.py  0007_alter_settings_logo.py
apps/company/models/: __init__.py  company.py  place.py
apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0002_alter_orderitem_order.py  0002_initial.py  0002_order_delivery_price_order_total_price.py  0002_order_status.py  0002_rename_unit_price_orderitem_price_and_more.py  0003_rename_date_order_created_date_remove_order_status.py  0004_remove_order_product_order_delivery_price_and_more.py
apps/orders/models/: __init__.py  order.py  (+1 more)
apps/products/: admin.py  filter.py  models.py  serializers.py  translation.py  urls.py
apps/users/: addition.py  models.py  urls.py  views.py
apps/utils/: send_code.py  validations.py
root/: settings.py  settings_jazzmin.py  urls.py  wsgi.py
(+33 files in other folders)
