[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Khasanjon <khasanjon.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"
django-modeltranslation = "^0.18.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
